--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,3 +1,7 @@
+---
+title: Home Page
+---
+
 import { Link } from 'gatsby'
 
 import Layout from '../components/layout'
@@ -12,7 +16,7 @@ Welcome to your new Gatsby site.
 
 Now go build something great.
 
-<div style={{ maxWidth: '300px', marginBottom: '1.45rem' }}>
+<div>
   <Image />
 </div>
 <Link to="/page-2/">Go to page 2</Link>
