Remove more packages.

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -2,22 +2,6 @@
 title: Home Page
 ---
 
-import { Link } from 'gatsby'
+# Home Page Stuff
 
-import Layout from '../components/layout'
-import Image from '../components/image'
-import SEO from '../components/seo'
-
-<SEO title="Home" keywords={['gatsby', 'application', 'react']} />
-
-# Hi people
-
-Welcome to your new Gatsby site.
-
-Now go build something great.
-
-<div>
-  <Image />
-</div>
-<Link to="/page-2/">Go to page 2</Link>
-
+Is here.
