--- a/src/pages/page-2.mdx
+++ b/src/pages/page-2.mdx
@@ -1,11 +1,5 @@
-import { Link } from 'gatsby'
-import Layout from '../components/layout'
-import SEO from '../components/seo'
+---
+title: Page 2
+---
 
-<SEO title="Page two" />
-
-# Hi from the second page
-
-Welcome to page 2
-
-<Link to="/">Go back to the homepage</Link>
+...is here.
